[package]
name = "openvm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
hex-literal = "0.4"
alloy-primitives = { version = "*" }
getrandom = { version = "*", features = ["custom"] }

revm-scroll = { git = "https://github.com/scroll-tech/scroll-revm.git", branch = "feat/openvm", default-features = false }
revm-precompile = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", features = [
    "std",
], optional = true }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", optional = true }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, features = [
    "bn254",
], optional = true }
openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", default-features = false, optional = true }

openvm-k256 = { package = "k256", git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", optional = true }
openvm-p256 = { package = "p256", git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7", optional = true }

[patch.crates-io]
k256 = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }
p256 = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }

revm = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-context = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-database = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-handler = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-inspector = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-precompile = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-primitives = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-state = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }

[features]
default = ["openvm"]
strict = []
openvm = [
    "dep:openvm",
    "dep:openvm-algebra-complex-macros",
    "dep:openvm-algebra-guest",
    "dep:openvm-bigint-guest",
    "dep:openvm-ecc-guest",
    "dep:openvm-sha256-guest",
    "dep:openvm-keccak256-guest",
    "dep:openvm-pairing-guest",
    "dep:openvm-pairing",
    "dep:openvm-rv32im-guest",
    "dep:openvm-k256",
    "dep:openvm-p256",

    "openvm-pairing/bn254",

    "alloy-primitives/native-keccak",
    "revm-scroll/openvm",
]
